[gd_scene load_steps=2 format=3 uid="uid://djvj3jwbx0ybu"]

[ext_resource type="Script" path="res://Scripts/MultiplayerLobby.gd" id=1]

[node name="MultiplayerLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 180.0

[node name="VBox" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/separation = 10

[node name="Title" type="Label"]
layout_mode = 2
text = "Simple Multiplayer"
horizontal_alignment = 1

[node name="Url" type="Label"]
layout_mode = 2
text = "Server: ws://127.0.0.1:9090"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="FindMatch" type="Button"]
layout_mode = 2
text = "Find Match"

[node name="CancelMatch" type="Button"]
layout_mode = 2
text = "Cancel"

[node name="Leave" type="Button"]
layout_mode = 2
text = "Leave"

[node name="Ready" type="Button"]
layout_mode = 2
text = "Ready"

[node name="Start" type="Button"]
layout_mode = 2
text = "Start"

[node name="ModeHBox" type="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ModeLabel" type="Label"]
layout_mode = 2
text = "Mode"

[node name="Mode" type="OptionButton"]
layout_mode = 2
text = "Co-op"
item_count = 2
selected = 0
popup/item_0/text = "Co-op"
popup/item_0/id = 0
popup/item_1/text = "1v1 Race"
popup/item_1/id = 1

[node name="TargetHBox" type="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TargetLabel" type="Label"]
layout_mode = 2
text = "Target Score"

[node name="Target" type="SpinBox"]
layout_mode = 2
min_value = 10.0
max_value = 10000.0
step = 10.0
value = 500.0

[node name="Status" type="Label"]
layout_mode = 2
text = "Connecting..."
horizontal_alignment = 1
